pxc/tests/test_31_thrattr/udcon.px
namespace udcon;
import test_common "";

function int foo(int x) {
  return x * x;
}

threaded struct bar {
  int z = foo(5); // error: foo is not threaded
  function int get() const {
    return z;
  }
}

function void t1() {
  bar b;
  println(b.get());
}

t1();

